// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "./proto";
package datacommons.v1;

message PropertiesRequest {
  string entity = 1;
  // Direction can only be "in" or "out"
  string direction = 2;
}
message PropertiesResponse {
  string entity = 1;
  repeated string properties = 2;
}

message BulkPropertiesRequest {
  repeated string entities = 1;
  // Direction can only be "in" or "out"
  string direction = 2;
}
message BulkPropertiesResponse {
  repeated PropertiesResponse data = 1;
}